--- a/app/views/static_pages/agreement.html.erb
+++ b/app/views/static_pages/agreement.html.erb
@@ -1,4 +1,4 @@
-<h1>StaticPages#agreement</h1>
+<h1>Chumon 利用規約</h1>
 <p>Find me in app/views/static_pages/agreement.html.erb</p>
 
 +<% provide(:title, '利用規約') %>
